added first version of dev tools

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Utilities</title>
+  <title>Vasu Vanka Dev Tools: Progressive Todo, IP Lookup, JSON Formatter, Base64 Tools, QR Generator & More</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Meta Description for SEO and social sharing -->
+  <meta name="description" content="Explore a collection of free online developer tools by Vasu Vanka: progressive todo list, IP address finder, JSON formatter/viewer, timer, Base64 encoder/decoder, QR code generator, color picker, and text manipulation tools. Enhance your development workflow today.">
+
+  <!-- Keywords (Optional, modern search engines rely less on this, but can still be included) -->
+  <meta name="keywords" content="developer tools, online tools, progressive todo, ip address, json formatter, json viewer, timer, base64 tools, qr code generator, color picker, text tools, vasu vanka">
+
+  <!-- Robots Meta Tag (Instructs search engines to index and follow links) -->
+  <meta name="robots" content="index, follow">
+
+  <!-- Canonical Tag (Helps prevent duplicate content issues by specifying the preferred URL) -->
+  <link rel="canonical" href="https://www.yourwebsite.com/">
+
+  <!-- Open Graph Meta Tags (For better social media sharing previews) -->
+  <meta property="og:title" content="Vasu Vanka Dev Tools: A Collection of Free Online Developer Utilities">
+  <meta property="og:description" content="Discover useful online developer tools by Vasu Vanka including a todo list, IP address lookup, JSON formatter, Base64 converter, QR code generator, and more.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.yourwebsite.com/">
+  <meta property="og:image" content="https://www.yourwebsite.com/og-image.jpg"> <!-- Replace with a relevant image URL -->
+
+  <!-- Twitter Card Meta Tags (For better previews on Twitter) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Vasu Vanka Dev Tools: Progressive Todo, JSON, IP Lookup & More">
+  <meta name="twitter:description" content="Streamline your development with free tools: todo list, IP lookup, JSON formatter/viewer, Base64, QR codes, color picker, and text tools by Vasu Vanka.">
+  <meta name="twitter:image" content="https://www.yourwebsite.com/twitter-image.jpg"> <!-- Replace with a relevant image URL -->
+
+  <!-- Schema Markup (Structured data for rich results, placed in the head or body) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Vasu Vanka Dev Tools",
+    "url": "https://www.yourwebsite.com/",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.yourwebsite.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    },
+    "description": "A comprehensive suite of free online developer tools by Vasu Vanka: progressive todo list, IP address lookup, JSON formatter/viewer, timer, Base64 encoder/decoder, QR code generator, color picker, and text manipulation utilities."
+  }
+  </script>
 </head>
 <body>
   <app-root></app-root>
+  <!--  Add the content of your Angular app within the <app-root> component -->
 </body>
 </html>
